--- a/styles/stilus.css
+++ b/styles/stilus.css
@@ -8,7 +8,7 @@ header {
 div#wrapper {
     margin: 0 auto;
 }
-div#content {
+div#content,footer {
     margin: 0 auto;
     padding: 0;
     width: 800px;
@@ -48,4 +48,20 @@ li a:hover:not(.active) {
 
 p.bold {
     font-weight: bold;
+}
+
+.column {
+    float: left;
+    width: 50%;
+}
+
+.thirdcolumn {
+    float: left;
+    width: 33%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
